[project]
name = "asr-utils"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cuda-bindings>=13.0.0",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "lightning>=2.4.0",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pytest>=9.0.2",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchcodec>=0.10.0",
]

[dependency-groups]
nemo = [
    "nemo-toolkit[asr]>=2.7.0",
]
